hphp/hack/test/typecheck/coeffects/codegen.php.exp
File "codegen.php", line 8, characters 3-25:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "codegen.php", line 7, characters 42-48:
  From this declaration, the context of this function body provides the capability WriteProperty
  File "codegen.php", line 3, characters 10-30:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
